# goose-jira-analyzer

./: .gitignore  LICENSE  README.md  goose.json  manifest.json  pyproject.toml  server.py  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
jira_analyzer/: __init__.py  analyzer.py  server.py
jira_analyzer/src/: server.py
